--- a/website/templates/create-skill.html
+++ b/website/templates/create-skill.html
@@ -10,15 +10,19 @@
         <h1>Create a Skill</h1>
         <form class="interior flex vertical start" method="post">
             <input type="text" name="name" id="name" placeholder="Skill Name" x-model="name">
+            {% if not cruleset.ability_scores %}
+                <div class="mild danger">
+                    <h3>Hey!</h3>
+					<p>You don't have any ability scores in this ruleset! Without adding any, you won't be able to specify the ability score used by this background. You can create ability scores <a href="{{ url_for('epchar.createStat') }}">here</a>.</p>
+                </div>
+                <div style="height: 30px"></div>
+            {% endif %}
             <label for="ability">Ability:</label>
             <select name="ability" id="ability" x-model="ability">
                 <option value="N/A">N/A</option>
-                <option value="STR">Strength</option>
-                <option value="DEX">Dexterity</option>
-                <option value="CON">Constitution</option>
-                <option value="INT">Intelligence</option>
-                <option value="WIS">Wisdom</option>
-                <option value="CHA">Charisma</option>
+                {% for score in cruleset.ability_scores %}
+                    <option value="{{ score.abbr }}">{{ score.name }}</option>
+                {% endfor %}
             </select>
             <textarea name="text" id="text" placeholder="Skill Description" x-model="text"></textarea>
             <a><button type="submit">Create Skill!</button></a>
